--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "express": "*",
     "express": "4.13.4",    
     "tower": "0.4.0-12",
-    "jQuery": "^1.11.1 || >=2.1.1"
+    "jQuery": "1.7.4"
    }
 }
 
